nav bar z-index fixed

--- a/index.css
+++ b/index.css
@@ -44,7 +44,7 @@ a:hover{
     position: fixed;
     top:0;
     padding: 10px;
-    z-index: 3;
+    z-index: 100;
 }
 
 .header-text{
